--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,5 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: run test script
-      run: |
-        ls 
-        dos2unix ./project/install.sh 
-        ./project/install.sh
+      run: ls 
       shell: bash
