--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,6 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: run test script
-      run: ls 
+      run: |
+        ls 
       shell: bash
