--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        path: main    
     - name: run test script
       run: |
         ls 
