--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,9 @@ jobs:
     - name: run test script
       run: |
         ls
+        cd main
+        ls
+        cd project
+        ls
         ./main/project/tests.sh
         
