--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,16 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: main    
+        # Install python
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+
     - name: run test script
       run: |
         ls
         cd main
+        pip install pytest
         ./project/tests.sh
         
