--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,7 @@ jobs:
 
     - name: run test script
       run: |
-        ls
         cd main
-        pip install pytest
+        pip install -r requirements.txt
         ./project/tests.sh
         
