add distances and durations information to final db

--- a/data/mapped_airports.json
+++ b/data/mapped_airports.json
@@ -1,26 +1,1 @@
-{
-    "city-mapping": {
-        "BER": "Berlin Bran­denburg",
-        "CGN": "Köln/Bonn",
-        "DRS": "Dresden",
-        "DUS": "Düsseldorf",
-        "FRA": "Frankfurt",
-        "HAM": "Hamburg",
-        "LEJ": "Leipzig/Halle",
-        "MUC": "München",
-        "NUE": "Nürnberg",
-        "TXL": "Berlin Tegel"
-    },
-    "station-mapping": {
-        "BER": "8011201",
-        "CGN": "8003330",
-        "DRS": "8011399",
-        "DUS": "8000082",
-        "FRA": "8070003",
-        "HAM": "8002547",
-        "LEJ": "8012183",
-        "MUC": "8004167",
-        "NUE": "8000284",
-        "TXL": "8089089"
-    }
-}
+{"city-mapping": {"BER": "Berlin Bran­denburg", "CGN": "Köln/Bonn", "DRS": "Dresden", "DUS": "Düsseldorf", "FRA": "Frankfurt", "HAM": "Hamburg", "LEJ": "Leipzig/Halle", "MUC": "München", "NUE": "Nürnberg", "TXL": "Berlin Tegel"}, "station-mapping": {"BER": {"eva_nr": "8011201", "long": "13,5119498", "lat": "52,3648038"}, "CGN": {"eva_nr": "8003330", "long": "7,119302", "lat": "50,878901"}, "DRS": {"eva_nr": "8011399", "long": "13,765993", "lat": "51,124665"}, "DUS": {"eva_nr": "8000082", "long": "6,786836", "lat": "51,292009"}, "FRA": {"eva_nr": "8070003", "long": "8,570185", "lat": "50,053167"}, "HAM": {"eva_nr": "8002547", "long": "10,006646", "lat": "53,63235"}, "LEJ": {"eva_nr": "8012183", "long": "12,223426", "lat": "51,423338"}, "MUC": {"eva_nr": "8004167", "long": "11,764185", "lat": "48,352095"}, "NUE": {"eva_nr": "8000284", "long": "11,082989", "lat": "49,445616"}, "TXL": {"eva_nr": "8089089", "long": "13,289781", "lat": "52,587998"}}}
