--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 certifi==2023.5.7
 charset-normalizer==3.1.0
+colorama==0.4.6
+exceptiongroup==1.1.1
+geographiclib==2.0
+geopy==2.3.0
 idna==3.4
+iniconfig==2.0.0
 numpy==1.24.3
+packaging==23.1
 pandas==2.0.2
+pluggy==1.0.0
+pyhafas==0.3.1
+pytest==7.3.2
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.31.0
 six==1.16.0
+tomli==2.0.1
 tzdata==2023.3
 urllib3==2.0.2
-pytest
