--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
 certifi==2023.5.7
 charset-normalizer==3.1.0
 colorama==0.4.6
+contourpy==1.1.0
+cycler==0.11.0
 exceptiongroup==1.1.1
+fonttools==4.40.0
 geographiclib==2.0
 geopy==2.3.0
 idna==3.4
+importlib-resources==5.12.0
 iniconfig==2.0.0
-numpy==1.24.3
+kiwisolver==1.4.4
+matplotlib==3.7.1
+numpy
 packaging==23.1
 pandas==2.0.2
+Pillow==9.5.0
 pluggy==1.0.0
 pyhafas==0.3.1
+pyparsing==3.1.0
 pytest==7.3.2
 python-dateutil==2.8.2
 pytz==2023.3
@@ -19,3 +27,4 @@ six==1.16.0
 tomli==2.0.1
 tzdata==2023.3
 urllib3==2.0.2
+zipp==3.15.0
